data/derived/sp14/progs/unify/prog1046.ml.out
Characters 88-95:
  else aPHelper sumList(digits n) (i+1) in 
                ^^^^^^^
Error: This expression has type int list -> int
       but an expression was expected of type int
